src/middleware/snapshots/axum_tracing_opentelemetry__middleware__trace_extractor__tests__trace_id_in_child_span.snap
---
source: src/middleware/trace_extractor.rs
expression: "events[event_idx]"
---
fields:
  message: new
level: INFO
span:
  name: my child span
spans:
  - http.client_ip: ""
    http.flavor: "1.1"
    http.host: ""
    http.method: GET
    http.route: /with_child_span
    http.scheme: HTTP
    http.target: /with_child_span
    http.user_agent: ""
    name: HTTP request
    otel.kind: server
    otel.name: GET /with_child_span
    trace_id: "[trace_id:lg32]"
target: "axum_tracing_opentelemetry::middleware::trace_extractor::tests"
timestamp: "[timestamp]"

